--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
-    <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
   </head>
 
