--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
   </head>
 
