--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
           </div>
           <ul>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
+            <li><a href="https://google.com">in ornare quam viverra orci sagittis eu volutpat odio facilisis</a></li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
           </ul>
