add _base.css and _print.css from main.css project to establish some defaults

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="styles/_base.css" />
+    <link rel="stylesheet" type="text/css" href="styles/_print.css" />
     <link rel="stylesheet" type="text/css" href="styles/first.css" />
   </head>
 
