--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="app">
+    <div id="resume">
       <header>
         <h1>
           <span id="first-name">Lorem</span>
