add a projects section and few more jobs to fit more than one page

--- a/resume.html
+++ b/resume.html
@@ -79,20 +79,6 @@
             <li><a href="https://google.com">in ornare quam viverra orci sagittis eu volutpat odio facilisis</a></li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-          </ul>
-        </div>
-
-        <div class="job">
-          <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <ul>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
           </ul>
         </div>
@@ -108,9 +94,85 @@
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <div class="details">
+            <div class="company">Google</div>
+            <div class="title">Software Engineer</div>
+            <div class="location">Mountain View, CA</div>
+            <div class="date">1/1/2000 – 1/1/2010</div>
+          </div>
+          <ul>
+            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
             <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
           </ul>
         </div>
+
+        <div class="job">
+          <div class="details">
+            <div class="company">Google</div>
+            <div class="title">Software Engineer</div>
+            <div class="location">Mountain View, CA</div>
+            <div class="date">1/1/2000 – 1/1/2010</div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+
+        <div class="job">
+          <div class="details">
+            <div class="company">Google</div>
+            <div class="title">Software Engineer</div>
+            <div class="location">Mountain View, CA</div>
+            <div class="date">1/1/2000 – 1/1/2010</div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+
+        <div class="job">
+          <div class="details">
+            <div class="company">Google</div>
+            <div class="title">Software Engineer</div>
+            <div class="location">Mountain View, CA</div>
+            <div class="date">1/1/2000 – 1/1/2010</div>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+
+      </section>
+
+      <section id="projects">
+        <h2>Personal Projects</h2>
+
+        <p id="project">
+          <span class="name">Lorem ipsum</span>
+          <span class="date">(Summer 2020)</span>: Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
+          lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
+          litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
+          ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
+          sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
+        </p>
+
+        <p id="project">
+          <span class="name">Lorem ipsum</span>
+          <span class="date">(Summer 2020)</span>: Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
+          lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
+          litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
+          ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
+          sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
+        </p>
 
       </section>
 
