--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Resume</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" type="text/css" href="styles/_base.css" />
+    <link rel="stylesheet" type="text/css" href="styles/_init.css" />
     <link rel="stylesheet" type="text/css" href="styles/_print.css" />
     <link rel="stylesheet" type="text/css" href="styles/first.css" />
   </head>
