some refactoring to make the html template more generic to work with multiple styles

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,141 +14,122 @@
 
   <body>
     <div id="resume">
-      <header>
-        <h1>
-          <span id="first-name">Lorem</span>
-          <span id="last-name">Ipsum</span>
-        </h1>
-        <div class="subtitle">
-          <span id="career-title">Software Engineer</span> &bull;
-          <span id="location">San Francisco, CA</span>
+
+      <section id="basics">
+        <div id="name">
+          <div class="first-name">Lorem</div>
+          <div class="last-name">Ipsum</div>
         </div>
-        <div class="subtitle">
-          <span id="phone">
-            (999) 999-9999
-          </span>
-          &bull;
-          <span id="email">
-            lorem@ipsum.com
-          </span>
-        </div>
-        <div class="subtitle">
-          <span id="linkedin">
-            loremipsum
-          </span>
-          &bull;
-          <span id="github">
-            loremipsum
-          </span>
-        </div>
-      </header>
+        <div id="career-title">Software Engineer</div>
+        <div id="location">San Francisco, CA</div>
+      </section>
+
+      <section id="contact">
+        <div id="phone">(999) 999-9999</div>
+        <div id="email">lorem@ipsum.com</div>
+        <div id="linkedin">loremipsum</div>
+        <div id="github">loremipsum</div>
+      </section>
 
       <section id="summary">
         <h2>Summary</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit ut aliquam purus sit. Viverra nibh cras pulvinar mattis nunc sed. Ornare quam viverra orci sagittis. Iaculis at erat pellentesque adipiscing commodo elit. Tempor id eu nisl nunc mi. Aliquet enim tortor at auctor urna nunc id. Tortor at auctor urna nunc id cursus. Hac habitasse platea dictumst quisque. Morbi tristique senectus et netus et malesuada fames.
-        </p>
+        <div>
+          Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit ut aliquam purus sit. Viverra nibh cras pulvinar mattis nunc sed. Ornare quam viverra orci sagittis. Iaculis at erat pellentesque adipiscing commodo elit. Tempor id eu nisl nunc mi. Aliquet enim tortor at auctor urna nunc id. Tortor at auctor urna nunc id cursus. Hac habitasse platea dictumst quisque. Morbi tristique senectus et netus et malesuada fames.
+        </div>
       </section>
 
       <section id="skills">
         <h2>Skills</h2>
-        <p>
-          <span class="name">Programming</span>
-          Python, Javascript, C#, PHP, HTML, CSS
-        </p>
-        <p>
-          <span class="name">Databases</span>
-          MS SQL Server, MySQL
-        </p>
-        <p>
-          <span class="name">Languages</span>
-          Fluent Lorem, Native Ipsum
-        </p>
+
+        <div class="skill">
+          <div class="name">Programming</div>
+          <div class="details">Python, Javascript, C#, PHP, HTML, CSS</div>
+        </div>
+
+        <div class="skill">
+          <div class="name">Databases</div>
+          <div class="details">MS SQL Server, MySQL</div>
+        </div>
+
+        <div class="skill">
+          <div class="name">Languages</div>
+          <div class="details">Fluent Lorem, Native Ipsum</div>
+        </div>
+
       </section>
 
       <section id="work">
         <h2>Work Experience</h2>
 
         <div class="job">
-          <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <ul>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li><a href="https://google.com">in ornare quam viverra orci sagittis eu volutpat odio facilisis</a></li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
+          <ul class="details">
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua.</li>
+            <li><a href="https://google.com">Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore.</a></li>
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
           </ul>
         </div>
 
         <div class="job">
-          <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <ul>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
+          <ul class="details">
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
           </ul>
         </div>
 
         <div class="job">
-          <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <ul>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
-            <li>in ornare quam viverra orci sagittis eu volutpat odio facilisis</li>
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
+          <ul class="details">
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+            <li>Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
           </ul>
         </div>
 
         <div class="job">
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
           <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          </div>
         </div>
 
         <div class="job">
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
           <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            Lorem ipsum dolor sit amet, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          </div>
         </div>
 
         <div class="job">
+          <div class="company">Google</div>
+          <div class="title">Software Engineer</div>
+          <div class="location">Mountain View, CA</div>
+          <div class="date">1/1/2000 – 1/1/2010</div>
           <div class="details">
-            <div class="company">Google</div>
-            <div class="title">Software Engineer</div>
-            <div class="location">Mountain View, CA</div>
-            <div class="date">1/1/2000 – 1/1/2010</div>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            Lorem ipsum dolor sit amet, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          </div>
         </div>
 
       </section>
@@ -155,36 +137,45 @@
       <section id="projects">
         <h2>Personal Projects</h2>
 
-        <p id="project">
-          <span class="name">Lorem ipsum</span>
-          <span class="date">(Summer 2020)</span>: Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
-          lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
-          litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
-          ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
-          sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
-        </p>
+        <div class="project">
+          <div class="name">Lorem ipsum</div>
+          <div class="date">(Summer 2020)</div>
+          <div class="description">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
+            lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
+            ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
+            sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
+          </div>
+        </div>
 
-        <p id="project">
-          <span class="name">Lorem ipsum</span>
-          <span class="date">(Summer 2020)</span>: Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
-          lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
-          litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
-          ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
-          sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
-        </p>
+        <div class="project">
+          <div class="name">Lorem ipsum</div>
+          <div class="date">(Summer 2020)</div>
+          <div class="description">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Suspendisse ac lorem eros. Ut sagittis
+            lorem id massa rhoncus dignissim. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos. In sed diam
+            ullamcorper, faucibus enim a, vestibulum massa. Praesent tristique
+            sit amet nisi eget tempor. Aenean maximus urna acerat interdum varius.
+          </div>
+        </div>
 
       </section>
 
       <section id="education">
         <h2>Education</h2>
-        <p>
-          <span id="university-degree">B.Eng. in Computer Engineering</span>,
-          <span id="university">Lorem Ipsum University (San Francisco, CA)</span>,
-          <span id="university-year">2000</span></p>
+
+        <div class="degree">
+          <div class="name">B.Eng. in Computer Engineering</div>
+          <div class="institution">Lorem Ipsum University (San Francisco, CA)</div>
+          <div class="date">2000</div>
+          <div class="details"></div>
+        </div>
+
       </section>
 
     </div>
+
   </body>
 </html>
