add header and footer sections to template

--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,10 @@
   <body>
     <div id="resume">
 
+      <section id="header">
+        <div class="content"></div>
+      </section>
+
       <section id="basics">
         <div id="name">
           <div class="first-name">Lorem</div>
@@ -173,6 +177,10 @@
           <div class="details"></div>
         </div>
 
+      </section>
+
+      <section id="footer">
+        <div class="content"></div>
       </section>
 
     </div>
